--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -68,6 +68,7 @@ development:
     pretty: false
     headers:
       'Access-Control-Allow-Origin': '*'
+    watch_content_base: true
     watch_options:
       ignored: '**/node_modules/**'
 
